Wed May 31 18:18:37 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * bin/MakeProjectCreator/config/ciao_config_handlers.mpb:

          Shortened some line lengths, to make the file more readable.

Wed May 31 16:36:43 UTC 2006  Steve Huston  <shuston@riverace.com>

        * tests/tests.mpc:
        * tests/run_test.lst: Don't build or run Unload_libACE on WinCE. The
          code is purposely leaving out ACE stuff and the ACE stuff is needed
          for WinCE, unless there's lots of conditional code added to duplicate
          the workings on ACE_TMAIN on CE.

Wed May 31 14:33:16 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/OS_NS_Thread.inl (recursive_mutex_lock):

          Added additional ACE_UNUSED_ARG for the timeout parameter, to
          eliminate warnings in single-threaded builds.

Wed May 31 13:05:05 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Argv_Type_Converter.cpp (align_char_with_wchar): ACE-ified this code.

Wed May 31 14:00:16 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/Recursive_Mutex_Test.cpp (run_main):

          Moved '#if defined (ACE_HAS_THREADS)' up a few lines to include
          a variable defined inside the same guard at the top of the file,
          to eliminate an 'undefined' error on single-threaded builds.

Wed May 31 13:37:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Bug_2542_Regression, this should run without problems

Wed May 31 11:44:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_time.inl:
          Fixed unreachable code warning

Wed May 31 09:23:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Changes for ACE_FOR_TAO configuration

Wed May 31 08:19:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bound_Ptr_Test.cpp:
          Initalise pointers with 0
